# hng-backend-2

./: .env.sample  .gitignore  Cargo.toml
migrations/: 20231001000000_create_tables.sql
src/: config.rs  error.rs  handlers.rs  main.rs  models.rs
src/db/: mod.rs  repository.rs
src/services/: country_service.rs  external_api.rs  image_generator.rs  mod.rs
