[package]
name = "hng-backend-2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-files = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
image = "0.25"
thiserror = "1.0"
env_logger = "0.11"
log = "0.4"

[profile.release]
opt-level = 3
lto = true